# drake

./: BUILD.bazel  iiwa_collision_free_postures.txt  ik_output.txt  ik_output21_0.txt  ik_output21_0_error.txt  plot_irb140_result.m  quadrotor3d_trig_clf_sol.txt  stewart_platform_analysis.m  stewart_platform_analytical_result.txt
C_Iris_Examples/: BUILD.bazel  README.md  iris_plant_visualizer.py  pinball_iiwas.ipynb  pinball_iiwas_2d.ipynb  pinball_iiwas_2d_binary_search_comparison.ipynb  requirements.txt  visualizations_utils.py
attic/multibody/dev/: BUILD.bazel
drake/examples/atlas/: BUILD.bazel  atlas_ik_failure_demo.cc
examples/irb140/: BUILD.bazel  IRB140_analytical_kinematics.cc  IRB140_analytical_kinematics.h
examples/irb140/doc/: analytical_kinematics.tex
examples/irb140/test/: IRB140_analytical_kinematics_test.cc  IRB140_global_ik_test.cc  analytical_vs_global_ik_test.cc  irb140_common.cc  visualize_analytical_vs_global_ik_result.py  visualize_irb_posture.cc
examples/minitaur/: BUILD.bazel  contact_implicit_direct_transcription.cc  contact_implicit_direct_transcription.h
examples/minitaur/models/: minitaur.urdf
examples/minitaur/test/: search_cyclic_gait.cc
examples/multi_contact_planning/: BUILD.bazel  contact_force_planning.cc  contact_force_planning.h  friction_cone.cc  friction_cone.h  manip_object.h
examples/multi_contact_planning/test/: contact_force_planning_test.cc  friction_cone_test.cc
examples/planar_gripper/: BUILD.bazel  brick.sdf  brick_dynamic_constraint.cc  brick_dynamic_constraint.h  brick_static_equilibrium_constraint.cc  brick_static_equilibrium_constraint.h  finger_brick.cc  finger_brick.h  gripper_brick.cc  gripper_brick.h  gripper_brick_planning_constraint_helper.cc  gripper_brick_planning_constraint_helper.h  gripper_brick_planning_utils.cc  gripper_brick_planning_utils.h  gripper_brick_trajectory_optimization.cc  gripper_brick_trajectory_optimization.h  planar_gripper.sdf  planar_gripper_common.cc  planar_gripper_common.h  planar_gripper_lcm.cc  planar_gripper_udp_utils.cc  planar_gripper_udp_utils.h  planar_postures.txt  reorient_ik_demo.cc  run_finger_brick_control.cc  run_finger_brick_planner.cc  run_planar_gripper_simulation.cc
examples/planar_gripper/keyframes/: planar_postures.txt
examples/planar_gripper/test/: brick_dynamic_constraint_test.cc  brick_qp_simulation.cc  brick_static_equilibrium_constraint_test.cc  desired_contact_force_udp_publisher_demo.cc  gripper_brick_planning_constraint_helper_test.cc  gripper_brick_planning_utils_test.cc  gripper_brick_test.cc  gripper_brick_trajectory_optimization_test.cc  planar_gripper_udp_utils_test.cc  speedgoat_udp_publish_demo.cc  speedgoat_udp_receiver_demo.cc
manipulation/models/ur3e_description/: BUILD.bazel
manipulation/planner/: BUILD.bazel  body_contact_point.cc  body_contact_point.h  friction_cone.cc  friction_cone.h  object_contact_planning.cc  object_contact_planning.h  quasi_dynamic_object_contact_planning.cc  quasi_dynamic_object_contact_planning.h  quasi_static_object_contact_planning.cc  quasi_static_object_contact_planning.h  robot_plan_interpolator.cc  robot_plan_interpolator.h
manipulation/planner/test/: block_flip_test.cc  block_test_util.cc  block_test_util.h  friction_cone_test.cc  object_contact_planning_test.cc  quasi_dynamic_block_flip_test.cc  quasi_dynamic_object_contact_planning_test.cc  quasi_static_block_flip_test.cc
multibody/rational_forward_kinematics/: BUILD.bazel  closest_pair.cc  closest_pair.h  collision_geometry.cc  collision_geometry.h  configuration_space_collision_free_region.cc  configuration_space_collision_free_region.h  convex_geometry.cc  convex_geometry.h  cspace_free_region.cc  cspace_free_region.h  generate_monomial_basis_util.cc  generate_monomial_basis_util.h  rational_forward_kinematics.cc  rational_forward_kinematics.h  rational_forward_kinematics_internal.cc  rational_forward_kinematics_internal.h  sweeping_volume_outer_approximation.cc  sweeping_volume_outer_approximation.h
multibody/rational_forward_kinematics/test/: configuration_space_collision_free_region_test.cc  convex_geometry_test.cc  cspace_free_region_test.cc  dual_arm_iiwa_self_collision_avoidance_demo.cc  dual_iiwa_demo.cc  dual_ur3e_demo.cc  generate_monomial_basis_util_test.cc  iiwa_shelf_demo.cc  iiwa_table_demo.cc  iiwa_two_boxes_affine_separating_plane_demo.cc  iiwa_two_boxes_demo.cc  iiwa_two_boxes_demo_utilities.cc  iiwa_two_boxes_demo_utilities.h  iiwa_two_boxes_reshuffled_tree_demo.cc  rational_forward_kin_test.cc  rational_forward_kinematics_internal_test.cc  rational_forward_kinematics_test.cc  rational_forward_kinematics_test_utilities.cc  rational_forward_kinematics_test_utilities.h  (+5 more)
solvers/: BUILD.bazel  CMakeLists.txt  Constraint.cpp  Constraint.h  NonlinearConstraint.m  NonlinearProgram.cpp  NonlinearProgram.h  NonlinearProgram.m  choose_best_solver.cc  conex_solver.cc  constraint.h  create_constraint.cc  gurobi_solver.cc  mathematical_program.cc  mathematical_program.h  minimum_value_constraint.cc  mixed_integer_linear_program_LCP.cc  mixed_integer_linear_program_LCP.h  mixed_integer_rotation_constraint.cc  mosek_solver.cc  sdpa_free_format.cc  sdpa_free_format.h  solver_type.h  solver_type_converter.cc
solvers/+drakeFunction/: Concatenated.m  SameInputConcatenated.m
solvers/test/: CMakeLists.txt  clp_solver_test.cc  conex_solver_test.cc  csdp_test_examples.h  evans_lcp.cc  linear_program_examples.cc  linear_program_examples.h  mathematical_program_test.cc  mixed_integer_linear_program_LCP_test.cc  mixed_integer_rotation_constraint_region_test.cc  mixed_integer_rotation_constraint_test.cc  mosek_lp_profile.cc  mosek_psd_demo.cc  multithread_solve_demo.cc  new_sdsos_demo.cc  optimization_examples.cc  semidefinite_program_examples.cc  sos_examples.cc  testConstraint.cpp
sos_iris_certifier/: BUILD.bazel  iris_plant_visualizer.py  iris_rational_cspace_test.ipynb  pinball_rational.ipynb  visualizations_utils.py
sos_iris_certifier/python_implementation/: BUILD.bazel  certified_iris_generator.py  sos_iris_python_example.ipynb
(+519 files in other folders)
