# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    data = [
        "assets/box_small.urdf",
        "assets/oneDOF_iiwa7_with_box_collision.sdf",
        "assets/twoDOF_iiwa7_with_box_collision.sdf",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualizations_utils",
    srcs = [
        "visualizations_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "prm",
    srcs = [
        "prm.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_py_library(
    name = "iris_plant_visualizer2",
    srcs = [
        "iris_plant_visualizer2.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

##########################################################
# NOTEBOOKS
##########################################################

drake_jupyter_py_binary(
    name = "pinball_iiwas_2d",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualizations_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "pinball_iiwas_2d_binary_search_comparison",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualizations_utils",
        "//bindings/pydrake",
    ],
)
