# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    data = [
        "assets/box.urdf",
        "assets/doublerob.urdf",
        "assets/ground.urdf",
        "assets/lid.urdf",
        "assets/planar_iiwa14_one_sphere.urdf",
        "assets/planar_iiwa_dense_collision_welded_gripper.yaml",
        "assets/planar_iiwa_simple_collision_welded_gripper.yaml",
        "assets/schunk_wsg_50_welded_fingers.sdf",
        "assets/shelves.sdf",
        "assets/shelves2.sdf",
        "assets/shelves3.sdf",
        "assets/shelves4.sdf",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualizations_utils",
    srcs = [
        "visualizations_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "spp",
    srcs = [
        "spp.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["//bindings/pydrake"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)
