# -*- python -*-

load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools:drake.bzl",
    "drake_cc_library",
    "drake_cc_googletest",
    "drake_cc_binary",
)

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "IRB140_analytical_kinematics",
    srcs = ["IRB140_analytical_kinematics.cc"],
    hdrs = ["IRB140_analytical_kinematics.h"],
    deps = [
        "//common",
        "//common:find_resource",
        "//common:symbolic",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers:parsers",
    ],
)

drake_cc_library(
    name = "IRB140_common",
    testonly = 1,
    srcs = ["test/irb140_common.cc"],
    hdrs = ["test/irb140_common.h"],
    deps = [
        "//common",
        "//common/test_utilities:eigen_matrix_compare",
        "//lcm",
        "//manipulation/util:simple_tree_visualizer",
        "//multibody:rigid_body_tree",
        "//multibody/parsers:parsers",
        "@gtest//:without_main",
    ],
)

drake_cc_googletest(
    name = "IRB140_analytical_kinematics_test",
    srcs = ["test/IRB140_analytical_kinematics_test.cc"],
    deps = [
        ":IRB140_analytical_kinematics",
        ":IRB140_common",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "IRB140_global_ik_test",
    srcs = ["test/IRB140_global_ik_test.cc"],
    deps = [
        ":IRB140_analytical_kinematics",
        ":IRB140_common",
        "//common/test_utilities:eigen_matrix_compare",
        "//multibody:global_inverse_kinematics",
    ],
)

drake_cc_binary(
    name = "analytical_vs_global_ik_test",
    testonly = 1,
    srcs = ["test/analytical_vs_global_ik_test.cc"],
    deps = [
        ":IRB140_analytical_kinematics",
        ":IRB140_common",
        "//common/proto:call_matlab",
        "//multibody:global_inverse_kinematics",
        "//multibody:inverse_kinematics",
    ],
)

drake_cc_binary(
    name = "run_posture_visualizer",
    testonly = 1,
    srcs = ["test/run_posture_visualizer.cc"],
    deps = [
        ":IRB140_common",
    ],
)

install_data()

add_lint_tests()
