# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "search_cyclic_gait",
    srcs = ["test/search_cyclic_gait.cc"],
    deps = [
        "//drake/common:find_resource",
        "//drake/multibody/parsers:urdf_parser",
        "//drake/multibody/rigid_body_plant:drake_visualizer",
        "//drake/multibody/rigid_body_plant:rigid_body_plant",
        "//drake/systems/trajectory_optimization:direct_transcription",
    ],
)

add_lint_tests()
