# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)


drake_cc_binary(
    name = "search_cyclic_gait",
    srcs = ["test/search_cyclic_gait.cc"],
    deps = [
        "//drake/systems/trajectory_optimization:rigid_body_tree_trajectory_optimization",
        "//drake/common:find_resource",
        "//drake/lcm:lcm",
        "//drake/manipulation/util:simple_tree_visualizer",
        "//drake/multibody/parsers:parsers",
        "//drake/multibody:rigid_body_tree_construction",
        "//drake/multibody/rigid_body_plant:drake_visualizer",
        "//drake/multibody/rigid_body_plant:rigid_body_plant",
    ],
)

add_lint_tests()
