# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/skylark:test_tags.bzl", "gurobi_test_tags", "mosek_test_tags")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "friction_cone",
    srcs = ["friction_cone.cc"],
    hdrs = ["friction_cone.h"],
    deps = [
        "//common:essential"
    ]
)

drake_cc_library(
    name = "contact_force_planning",
    srcs = ["contact_force_planning.cc"],
    hdrs = ["contact_force_planning.h"],
    deps = [
        ":friction_cone",
        "//solvers:mathematical_program",
    ],
)

drake_cc_googletest (
    name = "friction_cone_test",
    deps = [
        ":friction_cone",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "contact_force_planning_test",
    tags = gurobi_test_tags(),
    deps = [
        ":contact_force_planning",
        "//common/test_utilities:eigen_matrix_compare",
        "//solvers:gurobi_solver",
    ],
)
