# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

load("//tools/skylark:test_tags.bzl", "gurobi_test_tags")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "planner",
    deps = [
        ":constraint_relaxing_ik",
        ":differential_inverse_kinematics",
        ":robot_plan_interpolator",
    ],
)

drake_cc_library(
    name = "constraint_relaxing_ik",
    srcs = ["constraint_relaxing_ik.cc"],
    hdrs = ["constraint_relaxing_ik.h"],
    deps = [
        "//common/trajectories:piecewise_polynomial",
        "//multibody:inverse_kinematics",
        "//multibody:rigid_body_tree",
        "//multibody/parsers",
    ],
)

drake_cc_library(
    name = "differential_inverse_kinematics",
    srcs = ["differential_inverse_kinematics.cc"],
    hdrs = ["differential_inverse_kinematics.h"],
    deps = [
        "//multibody:rigid_body_tree",
        "//multibody/multibody_tree",
        "//multibody/parsers",
        "//solvers:mathematical_program",
    ],
)

drake_cc_library(
    name = "robot_plan_interpolator",
    srcs = ["robot_plan_interpolator.cc"],
    hdrs = ["robot_plan_interpolator.h"],
    deps = [
        "//common/trajectories:piecewise_polynomial",
        "//multibody:rigid_body_tree",
        "//multibody/parsers",
        "//systems/framework:leaf_system",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_library(
    name = "body_contact_point",
    srcs = ["body_contact_point.cc"],
    hdrs = ["body_contact_point.h"],
    deps = [
        "//common:essential",
        "@eigen",
    ],
)

drake_cc_library(
    name = "friction_cone",
    srcs = ["friction_cone.cc"],
    hdrs = ["friction_cone.h"],
    deps = [
        "//solvers:mathematical_program",
    ],
)
drake_cc_library(
    name = "object_contact_planning",
    srcs = ["object_contact_planning.cc"],
    hdrs = ["object_contact_planning.h"],
    deps = [
        ":body_contact_point",
        ":friction_cone",
        "//common:essential",
        "//solvers:integer_optimization_util",
        "//solvers:mathematical_program",
        "//solvers:mixed_integer_optimization_util",
        "//solvers:rotation_constraint",
    ],
)

drake_cc_library(
    name = "quasi_static_object_contact_planning",
    srcs = ["quasi_static_object_contact_planning.cc"],
    hdrs = ["quasi_static_object_contact_planning.h"],
    deps = [
        ":object_contact_planning",
    ],
)

drake_cc_library(
    name = "quasi_dynamic_object_contact_planning",
    srcs = ["quasi_dynamic_object_contact_planning.cc"],
    hdrs = ["quasi_dynamic_object_contact_planning.h"],
    deps = [
        ":object_contact_planning",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "constraint_relaxing_ik_test",
    timeout = "moderate",
    srcs = ["test/constraint_relaxing_ik_test.cc"],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    # TODO(sam.creasey) This test currently times out on Mac with
    # IPOPT.  Once IPOPT is tuned to provide better/faster IK results
    # (see https://github.com/RobotLocomotion/drake/issues/3128 ) we
    # should enable this test.
    tags = ["snopt"],
    deps = [
        ":constraint_relaxing_ik",
        "//common:find_resource",
    ],
)

drake_cc_googletest(
    name = "differential_inverse_kinematics_test",
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":differential_inverse_kinematics",
        "//common/test_utilities:eigen_matrix_compare",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//manipulation/util:world_sim_tree_builder",
        "//multibody/benchmarks/kuka_iiwa_robot:make_kuka_iiwa_model",
    ],
)

drake_cc_googletest(
    name = "robot_plan_interpolator_test",
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":robot_plan_interpolator",
        "//common:find_resource",
        "//systems/framework",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_googletest(
    name = "friction_cone_test",
    srcs = ["test/friction_cone_test.cc"],
    deps = [
        ":friction_cone",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_library(
    name = "block_test_util",
    srcs = ["test/block_test_util.cc"],
    hdrs = ["test/block_test_util.h"],
    deps = [
        ":object_contact_planning",
        ":friction_cone",
        "//manipulation/dev:remote_tree_viewer_wrapper",
    ],
    testonly = 1,
)

drake_cc_googletest(
    name = "object_contact_planning_test",
    srcs = ["test/object_contact_planning_test.cc"],
    tags = gurobi_test_tags(),
    deps = [
        ":object_contact_planning",
        ":block_test_util",
        "//manipulation/dev:remote_tree_viewer_wrapper",
        "//math:geometric_transform",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "block_flip_test",
    srcs = ["test/block_flip_test.cc"],
    tags = gurobi_test_tags(),
    deps = [
        ":quasi_static_object_contact_planning",
        ":block_test_util",
        "//math:geometric_transform",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
