# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

##########################################################
# NOTEBOOKS
##########################################################

drake_jupyter_py_binary(
    name = "sos_iris_python_example",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sos_iris_certifier:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sos_iris_certifier:iris_plant_visualizer",
        "//sos_iris_certifier:spp",
        "//sos_iris_certifier:visualizations_utils",
        "//sos_iris_certifier/python_implementation:certified_iris_generator",
        "//sos_iris_certifier/python_implementation:iris_utils",
    ],
)

##########################################################
# LIBRARIES
##########################################################
drake_py_library(
    name = "certified_iris_generator",
    srcs = [
        "certified_iris_generator.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sos_iris_certifier/python_implementation:iris_utils",
    ],
)

drake_py_library(
    name = "iris_utils",
    srcs = [
        "iris_utils.py",
    ],
    visibility = ["//visibility:public"],
)
