# -*- python -*-

load("//tools:drake.bzl", "drake_cc_library", "drake_cc_binary")
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "atlas_util",
    srcs = ["atlasUtil.cpp"],
    hdrs = ["atlasUtil.h"],
    deps = [
        "//drake/common:essential",
    ],
)

drake_cc_binary(
    name = "atlas_ik_failure_demo",
    srcs = ["atlas_ik_failure_demo.cc"],
    deps = [
        "//drake/common:find_resource",
        "//drake/manipulation/util:simple_tree_visualizer",
        "//drake/multibody:inverse_kinematics",
        "//drake/multibody:rigid_body_tree",
        "//drake/multibody/parsers",
    ],
)

install_data()

add_lint_tests()
